# gibushim-excel-to-db

./: .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py
example/: test_case.xlsx  test_case_dups.xlsx
excel_to_db_code/: __init__.py  db.py  errors_to_file.py  evaluation_insert.py  excel_reader.py  logger.py  main.py  validators.py
excel_to_db_code/enums/: __init__.py  exit_code.py
excel_to_db_code/models/: __init__.py  duplication_validation.py  evaluation_insert.py  excel_validation_error.py  half.py
logs/: insert_log.cs
wheelhouse/: pydantic-1.10.8-cp38-cp38-win_amd64.whl
