[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-to-db"
version = "0.1.0"
description = "Import evaluations from Excel into PostgreSQL with validation and logging"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Proprietary" }
authors = [{ name = "", email = "" }]
dependencies = [
  "openpyxl>=3.1.2",
  "pydantic>=1.10.8,<2",
  "psycopg2-binary>=2.9.9",
  "tqdm>=4.66.4",
]

[project.scripts]
excel-to-db = "excel_to_db_code.main:main"

[tool.setuptools]
packages = ["excel_to_db_code"]
